<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="KoffieZetten" Id="{7b0e832d-2d5e-49f1-af71-0c1060aee9eb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM KoffieZetten
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GVL.aantalSchepjes = 2*GVL.reservoirLevel THEN
		GVL.lekkereKoffie := TRUE;
	ELSIF GVL.aantalSchepjes < 2*GVL.reservoirLevel THEN
		GVL.waterigeKoffie := TRUE;
	ELSIF GVL.aantalSchepjes > 2*GVL.reservoirLevel THEN
		GVL.sterkeKoffie := TRUE;
	
	IF GVL.ikBenMoe THEN
		GVL.lekkereKoffie := TRUE;
	END_IF
			
END_IF
	GVL.apparaatLeeg := FALSE;
	GVL.koffieKlaar := TRUE;
	
	IF GVL.allesLegen THEN
		resetVars();
	END_IF]]></ST>
    </Implementation>
    <LineIds Name="KoffieZetten">
      <LineId Id="6" Count="16" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>